--- a/_sass/hydejack/_sidebar-essential.scss
+++ b/_sass/hydejack/_sidebar-essential.scss
@@ -23,7 +23,7 @@
   margin-left: -0.5rem;
 
   /* Sidebar links */
-  a {
+  h1 a {
     color: #ffdab9;
 
     &:hover {
@@ -35,6 +35,11 @@
     list-style: none;
     padding-left: 0;
   }
+
+  a {
+    color: white;
+  }
+
 }
 
 .sidebar-sticky {
