--- a/_includes/social-list-item.html
+++ b/_includes/social-list-item.html
@@ -3,7 +3,7 @@
   {% assign icon = include.platform %}
 {% endunless %}
 <li>
-  <a href="{{ include.url }}">
+  <a href="{{ include.url }}" target="_blank">
     <span class="icon-{{ icon }}"></span>
     <span class="sr-only">{{ include.platform }}</span>
   </a>
