--- a/_includes/post.html
+++ b/_includes/post.html
@@ -22,7 +22,7 @@
 
   <div class="post-date">
     <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%m/%d/%y" }}</time>
-    <span>{{ tags_content }}</span>
+    <!-- <span>{{ tags_content }}</span> -->
   </div>
 
   {% if post.description %}
